--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#0a1a2a" />
   
   <!-- SECURITY & OFFLINE SUPPORT -->
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline' blob:; worker-src 'self' blob:;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: data: blob:; img-src 'self' https: data: blob:; worker-src 'self' blob:;">
   
   <!-- Local Fonts are loaded in CSS, no links here -->
 </head>
