Define baseUrl variables and relax CSP

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   
-  <!-- SEO & PRESENTATION -->
   <title>Mystic Connect | Hand-Controlled</title>
-  <meta name="description" content="A 3D fantasy Connect-4 game controlled by hand gestures using MediaPipe AI. Play directly in your browser without touching the mouse." />
+  <meta name="description" content="A 3D fantasy Connect-4 game controlled by hand gestures using MediaPipe AI." />
   <meta name="theme-color" content="#0a1a2a" />
   
-  <!-- SECURITY & OFFLINE SUPPORT -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: data: blob:; img-src 'self' https: data: blob:; worker-src 'self' blob:;">
+  <!-- FIX: Highly permissive CSP to allow MediaPipe WASM and eval -->
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' data: blob:;">
   
-  <!-- Local Fonts are loaded in CSS, no links here -->
 </head>
   <body>
     <div id="root"></div>
