--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="A 3D fantasy Connect-4 game controlled by hand gestures using MediaPipe AI." />
   <meta name="theme-color" content="#0a1a2a" />
   
-  <!-- FIX: Highly permissive CSP to allow MediaPipe WASM and eval -->
+  <!-- FIX: Very Permissive CSP for MediaPipe WASM and Webcam -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' data: blob:;">
   
 </head>
